--- a/index.html
+++ b/index.html
@@ -1,49 +1,95 @@
 <html lang="en">
- <head>
+<head>
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <title>
-   Marvel Store Roblox
+   STIGMA Store Roblox
   </title>
-  <script src="https://cdn.tailwindcss.com">
-  </script>
+  <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&amp;display=swap" rel="stylesheet"/>
   <style>
    body {
       font-family: 'Montserrat', sans-serif;
     }
+   .menu {
+      display: none; /* Sembunyikan menu secara default */
+   }
   </style>
- </head>
- <body class="bg-[#121212] text-white">
+  <script>
+   function toggleMenu() {
+      const menu = document.getElementById('menu');
+      // Toggle display property
+      menu.style.display = menu.style.display === 'none' || menu.style.display === '' ? 'block' : 'none';
+   }
+  </script>
+</head>
+<body class="bg-[#121212] text-white">
   <!-- Navbar -->
   <nav class="flex items-center justify-between px-4 py-3 bg-[#121212] border-b border-gray-700">
    <div class="flex items-center space-x-2">
-    <img alt="Marvel Store logo with cube icon in blue, pink, and beige colors" class="w-8 h-8" height="32" src="https://storage.googleapis.com/a1aa/image/42c2de0d-5831-48b3-c636-14f017d64a77.jpg" width="32"/>
-    <span class="font-extrabold text-[#a7c9b6] text-lg tracking-wide">
-     MARVEL
-    </span>
-    <span class="font-extrabold text-[#e6d3a3] text-lg tracking-wide">
-     STORE
-    </span>
+    <img alt="STIGMA Store logo" class="w-8 h-8" height="32" src="https://storage.googleapis.com/a1aa/image/42c2de0d-5831-48b3-c636-14f017d64a77.jpg" width="32"/>
+    <span class="font-extrabold text-[#a7c9b6] text-lg tracking-wide">STIGMA</span>
+    <span class="font-extrabold text-[#e6d3a3] text-lg tracking-wide">STORE</span>
    </div>
    <div class="flex items-center space-x-3">
     <button aria-label="Search" class="w-8 h-8 flex items-center justify-center rounded-full hover:bg-gray-700">
-     <i class="fas fa-search text-white text-sm">
-     </i>
+     <i class="fas fa-search text-white text-sm"></i>
     </button>
     <button class="flex items-center space-x-1 border border-[#ff6a00] rounded-lg px-3 py-1 text-sm font-semibold text-white">
      <img alt="Indonesian flag icon" class="w-5 h-3 rounded-sm" height="14" src="https://storage.googleapis.com/a1aa/image/4b126249-4e1b-45fd-d0e1-99d30a91564d.jpg" width="20"/>
-     <span>
-      ID / IDR
-     </span>
+     <span>ID / IDR</span>
     </button>
-    <button aria-label="Menu" class="w-8 h-8 flex items-center justify-center rounded-md border border-gray-600">
-     <i class="fas fa-bars text-white text-lg">
-     </i>
+    <button aria-label="Menu" class="w-8 h-8 flex items-center justify-center rounded-md border border-gray-600" onclick="toggleMenu()">
+     <i class="fas fa-bars text-white text-lg"></i>
     </button>
    </div>
   </nav>
+
+  <!-- Menu -->
+  <div id="menu" class="menu fixed inset-0 bg-black bg-opacity-70 z-40">
+   <aside class="fixed top-0 left-0 h-full w-64 bg-[#121212] z-50 p-6 flex flex-col gap-10">
+    <div class="flex items-center justify-between">
+     <img alt="STIGMA Store logo" class="w-[120px] h-[32px] object-contain" height="32" src="https://storage.googleapis.com/a1aa/image/42c2de0d-5831-48b3-c636-14f017d64a77.jpg" width="120"/>
+     <button aria-label="Close menu" class="w-10 h-10 rounded-lg border border-[#F9B233] flex items-center justify-center text-white text-xl hover:bg-[#F9B233] hover:text-black transition" onclick="toggleMenu()">
+      <i class="fas fa-times"></i>
+     </button>
+    </div>
+    <nav class="flex flex-col gap-6 text-white font-semibold text-base leading-6">
+     <a class="flex justify-between items-center" href="#">
+      <span>Topup</span>
+      <i class="far fa-calendar-alt text-white text-lg"></i>
+     </a>
+     <a class="flex justify-between items-center" href="#">
+      <span>Cek Transaksi</span>
+      <i class="far fa-copy text-white text-lg"></i>
+     </a>
+     <a class="flex justify-between items-center" href="#">
+      <span>Leaderboard</span>
+      <i class="fas fa-sitemap text-white text-lg"></i>
+     </a>
+     <a class="flex justify-between items-center" href="#">
+      <span>Kalkulator</span>
+      <i class="fas fa-arrow-right text-white text-lg"></i>
+     </a>
+     <a class="flex justify-between items-center" href="#">
+      <span>Masuk</span>
+      <i class="fas fa-sign-in-alt text-white text-lg"></i>
+     </a>
+     <a class="flex justify-between items-center" href="#">
+      <span>Daftar</span>
+      <i class="fas fa-user-plus text-white text-lg"></i>
+     </a>
+    </nav>
+   </aside>
+  </div>
+
+  <!-- Main content -->
+  <main class="px-4 pb-6">
+   <!-- Konten utama di sini -->
+  </main>
+</body>
+</html>
   <!-- Main card -->
   <section class="max-w-md mx-auto mt-4 bg-[#1e1e1e] rounded-lg overflow-hidden">
    <img alt="Group of Roblox characters standing together in colorful outfits" class="w-full object-cover" height="180" src="https://storage.googleapis.com/a1aa/image/e3122d21-1a9a-4d3d-b08d-b7488fd7e780.jpg" width="400"/>
