--- a/index.html
+++ b/index.html
@@ -792,53 +792,51 @@
  </head>
  <body class="bg-[#2B2B2B] p-4 min-h-screen flex justify-center">
   <div class="w-full max-w-md space-y-4">
-   <!-- E-Wallet -->
-   <div class="bg-[#3B3B3B] rounded-lg p-4">
-    <button aria-expanded="false" class="w-full flex justify-between items-center text-gray-300 font-semibold text-sm" type="button">
-     <span>
-      E-Wallet
-     </span>
-     <i class="fas fa-chevron-down text-gray-400">
-     </i>
-    </button>
-    <div class="mt-3 flex items-center space-x-3">
-     <img alt="LinkAja logo red square with white text L" class="h-6 w-auto" height="24" src="https://storage.googleapis.com/a1aa/image/cadcd76d-b897-4d54-c3cd-0b67880e5483.jpg" width="24"/>
-     <img alt="DANA logo blue circle with white letter D" class="h-6 w-auto" height="24" src="https://storage.googleapis.com/a1aa/image/24be1c4c-5430-47c9-117e-e25de0b262a8.jpg" width="24"/>
-     <img alt="OVO logo purple text OVO" class="h-6 w-auto" height="24" src="https://storage.googleapis.com/a1aa/image/5f6b07d1-844f-452f-8a77-b8f1211b35ae.jpg" width="24"/>
-     <img alt="ShopeePay logo orange square with white letter S" class="h-6 w-auto" height="24" src="https://storage.googleapis.com/a1aa/image/157e0973-8624-4cf5-44b2-61341d1c1008.jpg" width="24"/>
-    </div>
-   </div>
-   <!-- Virtual Account -->
-   <div class="bg-[#3B3B3B] rounded-lg p-4">
-    <button aria-expanded="false" class="w-full flex justify-between items-center text-gray-300 font-semibold text-sm" type="button">
-     <span>
-      Virtual Account
-     </span>
-     <i class="fas fa-chevron-down text-gray-400">
-     </i>
-    </button>
-    <div class="mt-3 flex items-center space-x-2 overflow-x-auto">
-     <img alt="Bank BCA logo yellow circle with black letter B" class="h-6 w-auto flex-shrink-0" height="24" src="https://storage.googleapis.com/a1aa/image/58f8fe63-d621-455e-9fcb-be99640669a4.jpg" width="24"/>
-     <img alt="Mandiri bank logo blue rectangle with white letter M" class="h-6 w-auto flex-shrink-0" height="24" src="https://storage.googleapis.com/a1aa/image/41069067-565f-42bd-6ce1-f92f82d442b6.jpg" width="24"/>
-     <img alt="BNI bank logo blue square with white letter B" class="h-6 w-auto flex-shrink-0" height="24" src="https://storage.googleapis.com/a1aa/image/ccebe3b9-0707-4b3d-c4ba-b3fe3b04bd50.jpg" width="24"/>
-     <img alt="CIMB bank logo orange square with white letter C" class="h-6 w-auto flex-shrink-0" height="24" src="https://storage.googleapis.com/a1aa/image/46769786-57e6-4f69-68c4-a70a80fae977.jpg" width="24"/>
-     <img alt="BRI bank logo red square with white letter B" class="h-6 w-auto flex-shrink-0" height="24" src="https://storage.googleapis.com/a1aa/image/326778d8-6e7c-473a-dfea-8452b9ae3963.jpg" width="24"/>
-     <img alt="BSI bank logo green square with white letter B" class="h-6 w-auto flex-shrink-0" height="24" src="https://storage.googleapis.com/a1aa/image/104ed764-fea4-45a4-f907-7b2c94167576.jpg" width="24"/>
-    </div>
-   </div>
-   <!-- Convenience Store -->
-   <div class="bg-[#3B3B3B] rounded-lg p-4">
-    <button aria-expanded="false" class="w-full flex justify-between items-center text-gray-300 font-semibold text-sm" type="button">
-     <span>
-      Convenience Store
-     </span>
-     <i class="fas fa-chevron-down text-gray-400">
-     </i>
-    </button>
-    <div class="mt-3 flex items-center space-x-3">
-     <img alt="Alfamart logo red text on white background" class="h-4 w-auto" height="16" src="https://storage.googleapis.com/a1aa/image/985df9ca-28c0-4b1b-7d11-603539d31962.jpg" width="48"/>
-     <img alt="Indomaret logo blue text on white background" class="h-4 w-auto" height="16" src="https://storage.googleapis.com/a1aa/image/eb9d185c-75a0-4415-236a-736ea942e3ac.jpg" width="48"/>
-    </div>
+<!-- E-Wallet --> 
+     <details class="bg-[#3a3a3a] rounded-md px-4 py-2 cursor-pointer"> 
+      <summary class="list-none flex justify-between items-center font-semibold text-[13px]"> 
+       E-Wallet 
+       <i class="fas fa-chevron-down text-gray-400"> 
+       </i> 
+      </summary> 
+      <div class="mt-2 flex gap-2 items-center justify-end"> 
+       <img alt="LinkAja logo red rectangle with white text" class="h-5" height="20" src="https://storage.googleapis.com/a1aa/image/9cf00ac7-6232-4652-297c-ec67faf19e73.jpg" width="40"/> 
+       <img alt="DANA logo blue rectangle with white text" class="h-5" height="20" src="https://storage.googleapis.com/a1aa/image/75956a47-13fd-4a1b-0d1d-92143b43f19a.jpg" width="40"/> 
+       <img alt="OVO logo purple rectangle with white text" class="h-5" height="20" src="https://storage.googleapis.com/a1aa/image/409a677d-cdce-450d-5ab8-9d869c8a87c0.jpg" width="40"/> 
+       <img alt="ShopeePay logo orange rectangle with white text" class="h-5" height="20" src="https://storage.googleapis.com/a1aa/image/a513a0b9-de61-4bd2-4327-f0b67c7390b9.jpg" width="40"/> 
+      </div> 
+     </details> 
+     <!-- Virtual Account --> 
+     <details class="bg-[#3a3a3a] rounded-md px-4 py-2 cursor-pointer"> 
+      <summary class="list-none flex justify-between items-center font-semibold text-[13px]"> 
+       Virtual Account 
+       <i class="fas fa-chevron-down text-gray-400"> 
+       </i> 
+      </summary> 
+      <div class="mt-2 flex gap-2 items-center justify-end flex-wrap"> 
+       <img alt="Minibank logo yellow rectangle with black text" class="h-5" height="20" src="https://storage.googleapis.com/a1aa/image/9955589c-601b-47f4-25ee-a024389f5ab4.jpg" width="40"/> 
+       <img alt="Bank Mandiri logo orange rectangle with black text" class="h-5" height="20" src="https://storage.googleapis.com/a1aa/image/1c9465a7-1a28-43f2-6127-67a895f1386e.jpg" width="40"/> 
+       <img alt="BCA bank logo blue rectangle with white text" class="h-5" height="20" src="https://storage.googleapis.com/a1aa/image/a64c5757-4308-4e06-3db3-b0711bc7ab61.jpg" width="40"/> 
+       <img alt="BNI bank logo red rectangle with white text" class="h-5" height="20" src="https://storage.googleapis.com/a1aa/image/95804c85-c021-4d12-aa08-8fb2c9f7c696.jpg" width="40"/> 
+       <img alt="BRI bank logo green rectangle with white text" class="h-5" height="20" src="https://storage.googleapis.com/a1aa/image/6a7aa3a3-927a-4939-9900-cf5b3580038c.jpg" width="40"/> 
+       <img alt="Permata bank logo red rectangle with white text" class="h-5" height="20" src="https://storage.googleapis.com/a1aa/image/4b044be7-4da7-4913-37f5-7c582b22f247.jpg" width="40"/> 
+       <img alt="Bank Syariah logo blue rectangle with white text" class="h-5" height="20" src="https://storage.googleapis.com/a1aa/image/9f1d7c44-2e89-4620-32c3-5d29336f3fc0.jpg" width="40"/> 
+       <img alt="BSI bank logo teal rectangle with white text" class="h-5" height="20" src="https://storage.googleapis.com/a1aa/image/952de721-ec8f-4b84-62df-af3ddabb2b69.jpg" width="40"/> 
+      </div> 
+     </details> 
+     <!-- Convenience Store --> 
+     <details class="bg-[#3a3a3a] rounded-md px-4 py-2 cursor-pointer"> 
+      <summary class="list-none flex justify-between items-center font-semibold text-[13px]"> 
+       Convenience Store 
+       <i class="fas fa-chevron-down text-gray-400"> 
+       </i> 
+      </summary> 
+      <div class="mt-2 flex gap-2 items-center justify-end flex-wrap"> 
+       <img alt="Alfamart convenience store logo red rectangle with white text" class="h-5" height="20" src="https://storage.googleapis.com/a1aa/image/2a9b19e2-2729-44b4-e539-b99312fa7853.jpg" width="40"/> 
+       <img alt="Indomaret convenience store logo blue rectangle with white text" class="h-5" height="20" src="https://storage.googleapis.com/a1aa/image/f4f6c6eb-5a45-4247-c3d1-50c56fcaa930.jpg" width="40"/> 
+      </div> 
+     </details> 
+    </section> 
    </div>
    <!-- Transfer Bank -->
    <div class="bg-[#3B3B3B] rounded-lg p-4">
