--- a/index.html
+++ b/index.html
@@ -1,182 +1,204 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
-  <title>
-   STIGMA Store Roblox
-  </title>
+  <title>STIGMA Store Roblox</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&amp;display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet"/>
   <style>
-   body {
+    body {
       font-family: 'Montserrat', sans-serif;
     }
-   .menu {
+    .menu {
       display: none; /* Sembunyikan menu secara default */
-   }
+    }
+    .tab-content {
+      display: none;
+    }
+    .tab-content.active {
+      display: block;
+    }
   </style>
   <script>
-   function toggleMenu() {
+    function toggleMenu() {
       const menu = document.getElementById('menu');
-      // Toggle display property
       menu.style.display = menu.style.display === 'none' || menu.style.display === '' ? 'block' : 'none';
-   }
+    }
+
+    function showTab(tab) {
+      const transaksiContent = document.getElementById('transaksiContent');
+      const keteranganContent = document.getElementById('keteranganContent');
+      const transaksiBtn = document.getElementById('transaksiBtn');
+      const keteranganBtn = document.getElementById('keteranganBtn');
+
+      if (tab === 'transaksi') {
+        transaksiContent.classList.add('active');
+        keteranganContent.classList.remove('active');
+        transaksiBtn.classList.add('bg-[#ff6a00]');
+        transaksiBtn.classList.remove('bg-[#2a2a2a]');
+        keteranganBtn.classList.add('bg-[#2a2a2a]');
+        keteranganBtn.classList.remove('bg-[#ff6a00]');
+      } else {
+        keteranganContent.classList.add('active');
+        transaksiContent.classList.remove('active');
+        keteranganBtn.classList.add('bg-[#ff6a00]');
+        keteranganBtn.classList.remove('bg-[#2a2a2a]');
+        transaksiBtn.classList.add('bg-[#2a2a2a]');
+        transaksiBtn.classList.remove('bg-[#ff6a00]');
+      }
+    }
   </script>
 </head>
 <body class="bg-[#121212] text-white">
   <!-- Navbar -->
   <nav class="flex items-center justify-between px-4 py-3 bg-[#121212] border-b border-gray-700">
-   <div class="flex items-center space-x-2">
-    <img alt="STIGMA Store logo" class="w-8 h-8" height="32" src="https://storage.googleapis.com/a1aa/image/42c2de0d-5831-48b3-c636-14f017d64a77.jpg" width="32"/>
-    <span class="font-extrabold text-[#a7c9b6] text-lg tracking-wide">STIGMA</span>
-    <span class="font-extrabold text-[#e6d3a3] text-lg tracking-wide">STORE</span>
-   </div>
-   <div class="flex items-center space-x-3">
-    <button aria-label="Search" class="w-8 h-8 flex items-center justify-center rounded-full hover:bg-gray-700">
-     <i class="fas fa-search text-white text-sm"></i>
-    </button>
-    <button class="flex items-center space-x-1 border border-[#ff6a00] rounded-lg px-3 py-1 text-sm font-semibold text-white">
-     <img alt="Indonesian flag icon" class="w-5 h-3 rounded-sm" height="14" src="https://storage.googleapis.com/a1aa/image/4b126249-4e1b-45fd-d0e1-99d30a91564d.jpg" width="20"/>
-     <span>ID / IDR</span>
-    </button>
-    <button aria-label="Menu" class="w-8 h-8 flex items-center justify-center rounded-md border border-gray-600" onclick="toggleMenu()">
-     <i class="fas fa-bars text-white text-lg"></i>
-    </button>
-   </div>
+    <div class="flex items-center space-x-2">
+      <img alt="STIGMA Store logo" class="w-8 h-8" height="32" src="https://storage.googleapis.com/a1aa/image/42c2de0d-5831-48b3-c636-14f017d64a77.jpg" width="32"/>
+      <span class="font-extrabold text-[#a7c9b6] text-lg tracking-wide">STIGMA</span>
+      <span class="font-extrabold text-[#e6d3a3] text-lg tracking-wide">STORE</span>
+    </div>
+    <div class="flex items-center space-x-3">
+      <button aria-label="Search" class="w-8 h-8 flex items-center justify-center rounded-full hover:bg-gray-700">
+        <i class="fas fa-search text-white text-sm"></i>
+      </button>
+      <button class="flex items-center space-x-1 border border-[#ff6a00] rounded-lg px-3 py-1 text-sm font-semibold text-white">
+        <img alt="Indonesian flag icon" class="w-5 h-3 rounded-sm" height="14" src="https://storage.googleapis.com/a1aa/image/4b126249-4e1b-45fd-d0e1-99d30a91564d.jpg" width="20"/>
+        <span>ID / IDR</span>
+      </button>
+      <button aria-label="Menu" class="w-8 h-8 flex items-center justify-center rounded-md border border-gray-600" onclick="toggleMenu()">
+        <i class="fas fa-bars text-white text-lg"></i>
+      </button>
+    </div>
   </nav>
 
   <!-- Menu -->
   <div id="menu" class="menu fixed inset-0 bg-black bg-opacity-70 z-40">
-   <aside class="fixed top-0 left-0 h-full w-64 bg-[#121212] z-50 p-6 flex flex-col gap-10">
-    <div class="flex items-center justify-between">
-     <img alt="STIGMA Store logo" class="w-[120px] h-[32px] object-contain" height="32" src="https://storage.googleapis.com/a1aa/image/42c2de0d-5831-48b3-c636-14f017d64a77.jpg" width="120"/>
-     <button aria-label="Close menu" class="w-10 h-10 rounded-lg border border-[#F9B233] flex items-center justify-center text-white text-xl hover:bg-[#F9B233] hover:text-black transition" onclick="toggleMenu()">
-      <i class="fas fa-times"></i>
-     </button>
-    </div>
-    <nav class="flex flex-col gap-6 text-white font-semibold text-base leading-6">
-     <a class="flex justify-between items-center" href="#">
-      <span>Topup</span>
-      <i class="far fa-calendar-alt text-white text-lg"></i>
-     </a>
-     <a class="flex justify-between items-center" href="#">
-      <span>Cek Transaksi</span>
-      <i class="far fa-copy text-white text-lg"></i>
-     </a>
-     <a class="flex justify-between items-center" href="#">
-      <span>Leaderboard</span>
-      <i class="fas fa-sitemap text-white text-lg"></i>
-     </a>
-     <a class="flex justify-between items-center" href="#">
-      <span>Kalkulator</span>
-      <i class="fas fa-arrow-right text-white text-lg"></i>
-     </a>
-     <a class="flex justify-between items-center" href="#">
-      <span>Masuk</span>
-      <i class="fas fa-sign-in-alt text-white text-lg"></i>
-     </a>
-     <a class="flex justify-between items-center" href="#">
-      <span>Daftar</span>
-      <i class="fas fa-user-plus text-white text-lg"></i>
-     </a>
-    </nav>
-   </aside>
+    <aside class="fixed top-0 left-0 h-full w-64 bg-[#121212] z-50 p-6 flex flex-col gap-10">
+      <div class="flex items-center justify-between">
+        <img alt="STIGMA Store logo" class="w-[120px] h-[32px] object-contain" height="32" src="https://storage.googleapis.com/a1aa/image/42c2de0d-5831-48b3-c636-14f017d64a77.jpg" width="120"/>
+        <button aria-label="Close menu" class="w-10 h-10 rounded-lg border border-[#F9B233] flex items-center justify-center text-white text-xl hover:bg-[#F9B233] hover:text-black transition" onclick="toggleMenu()">
+          <i class="fas fa-times"></i>
+        </button>
+      </div>
+      <nav class="flex flex-col gap-6 text-white font-semibold text-base leading-6">
+        <a class="flex justify-between items-center" href="#">
+          <span>Topup</span>
+          <i class="far fa-calendar-alt text-white text-lg"></i>
+        </a>
+        <a class="flex justify-between items-center" href="#">
+          <span>Cek Transaksi</span>
+          <i class="far fa-copy text-white text-lg"></i>
+        </a>
+        <a class="flex justify-between items-center" href="#">
+          <span>Leaderboard</span>
+          <i class="fas fa-sitemap text-white text-lg"></i>
+        </a>
+        <a class="flex justify-between items-center" href="#">
+          <span>Kalkulator</span>
+          <i class="fas fa-arrow-right text-white text-lg"></i>
+        </a>
+        <a class="flex justify-between items-center" href="#">
+          <span>Masuk</span>
+          <i class="fas fa-sign-in-alt text-white text-lg"></i>
+        </a>
+        <a class="flex justify-between items-center" href="#">
+          <span>Daftar</span>
+          <i class="fas fa-user-plus text-white text-lg"></i>
+        </a>
+      </nav>
+    </aside>
   </div>
 
   <!-- Main content -->
   <main class="px-4 pb-6">
-   <!-- Konten utama di sini -->
+    <!-- Main card -->
+    <section class="max-w-md mx-auto mt-4 bg-[#1e1e1e] rounded-lg overflow-hidden">
+      <img alt="Group of Roblox characters" class="w-full object-cover" height="180" src="https://storage.googleapis.com/a1aa/image/e3122d21-1a9a-4d3d-b08d-b7488fd7e780.jpg" width="400"/>
+      <div class="flex p-4 bg-gradient-to-r from-[#1e1e1e] to-[#121212]">
+        <img alt="Roblox game cover" class="w-24 h-24 rounded-lg flex-shrink-0" height="100" src="https://storage.googleapis.com/a1aa/image/c2e83eec-e8c9-4537-b74a-677696883a73.jpg" width="100"/>
+        <div class="ml-4 flex flex-col justify-center text-white">
+          <h3 class="font-bold text-sm uppercase">ROBLOX</h3>
+          <p class="text-xs mt-1">Roblox Corp</p>
+        </div>
+      </div>
+      <div class="flex justify-around bg-[#121212] py-2 text-xs text-gray-300 border-t border-gray-700">
+        <div class="flex items-center space-x-1">
+          <i class="fas fa-globe text-yellow-400 text-[10px]"></i>
+          <span>Proses Cepat</span>
+        </div>
+        <div class="flex items-center space-x-1">
+          <i class="fas fa-headset text-blue-600 text-[10px]"></i>
+          <span>Layanan Chat 24/7</span>
+        </div>
+        <div class="flex items-center space-x-1">
+          <i class="fas fa-shield-alt text-blue-600 text-[10px]"></i>
+          <span>Pembayaran Aman!</span>
+        </div>
+      </div>
+    </section>
+
+    <!-- Tabs -->
+    <section class="max-w-md mx-auto mt-4 bg-[#2a2a2a] rounded-lg overflow-hidden">
+      <div class="flex text-xs font-semibold text-white">
+        <button id="transaksiBtn" class="flex-1 bg-[#ff6a00] py-2 rounded-tl-lg rounded-bl-lg focus:outline-none" type="button" onclick="showTab('transaksi')">
+          Transaksi
+        </button>
+        <button id="keteranganBtn" class="flex-1 bg-[#2a2a2a] py-2 rounded-tr-lg rounded-br-lg focus:outline-none" type="button" onclick="showTab('keterangan')">
+          Keterangan
+        </button>
+      </div>
+
+      <!-- Transaksi Content -->
+      <div id="transaksiContent" class="tab-content active p-4 space-y-4">
+        <div class="space-y-2">
+          <div class="flex items-center bg-[#3a3a3a] px-3 py-2 rounded-md text-white font-semibold text-sm">
+            <span class="bg-[#ff6a00] rounded-sm px-2 py-1 mr-2">1</span>
+            Masukkan Data Akun
+          </div>
+          <div class="grid grid-cols-2 gap-4 text-xs text-gray-300">
+            <label class="flex flex-col space-y-1">
+              <span class="font-semibold flex items-center">Username <i class="fas fa-info-circle ml-1 text-gray-400 text-[10px]" title="Info"></i></span>
+              <input class="bg-[#3a3a3a] rounded-md py-2 px-3 text-xs placeholder-gray-500 text-white focus:outline-none" placeholder="Masukkan Username" type="text"/>
+            </label>
+            <label class="flex flex-col space-y-1">
+              <span class="font-semibold">Password</span>
+              <input class="bg-[#3a3a3a] rounded-md py-2 px-3 text-xs placeholder-gray-500 text-white focus:outline-none" placeholder="Masukkan Password" type="password"/>
+            </label>
+          </div>
+          <p class="text-[10px] bg-[#6b3f2f] rounded-md px-3 py-1 mt-1 text-[#d9bba0]">Please make sure you fill the correct account data</p>
+        </div>
+        <div class="space-y-2">
+          <div class="flex items-center bg-[#3a3a3a] px-3 py-2 rounded-md text-white font-semibold text-sm">
+            <span class="bg-[#ff6a00] rounded-sm px-2 py-1 mr-2">2</span>
+            Pilih Nominal
+          </div>
+        </div>
+      </div>
+
+      <!-- Keterangan Content -->
+      <div id="keteranganContent" class="tab-content bg-[#1f1f1f] rounded-md">
+        <div class="bg-[#f87f1a] text-[#2a2a2a] font-semibold text-sm px-4 py-2 rounded-t-md">Deskripsi Roblox</div>
+        <div class="px-4 py-3 text-white text-xs leading-tight font-normal">
+          Top up <strong>Robux Roblox</strong> dengan harga paling murah, aman, cepat, dan terpercaya hanya di MARVELSTORE.<br />
+          Cara topup <strong>Robux Roblox</strong> :<br />
+          - Pilih Nominal<br />
+          - Masukkan Username dan Password Roblox kamu<br />
+          - Tentukan Jumlah Pembelian<br />
+          - Pilih Pembayaran<br />
+          - Masukkan Kode Promo (jika ada)<br />
+          - Isi Detail Kontak<br />
+          - Klik Pesan Sekarang dan lakukan Pembayaran<br />
+          - Selesai<br />
+          <strong>Mengalami Kendala / Error..? <i class="fas fa-ban"></i></strong><br />
+          Silahkan Klik untuk menghubungi Admin <span class="inline-block">👉 081-91-77777-27</span>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
-  <!-- Main card -->
-  <section class="max-w-md mx-auto mt-4 bg-[#1e1e1e] rounded-lg overflow-hidden">
-   <img alt="Group of Roblox characters standing together in colorful outfits" class="w-full object-cover" height="180" src="https://storage.googleapis.com/a1aa/image/e3122d21-1a9a-4d3d-b08d-b7488fd7e780.jpg" width="400"/>
-   <div class="flex p-4 bg-gradient-to-r from-[#1e1e1e] to-[#121212]">
-    <img alt="Roblox game cover image with character holding a hammer and city background" class="w-24 h-24 rounded-lg flex-shrink-0" height="100" src="https://storage.googleapis.com/a1aa/image/c2e83eec-e8c9-4537-b74a-677696883a73.jpg" width="100"/>
-    <div class="ml-4 flex flex-col justify-center text-white">
-     <h3 class="font-bold text-sm uppercase">
-      ROBLOX
-     </h3>
-     <p class="text-xs mt-1">
-      Roblox Corp
-     </p>
-    </div>
-   </div>
-   <div class="flex justify-around bg-[#121212] py-2 text-xs text-gray-300 border-t border-gray-700">
-    <div class="flex items-center space-x-1">
-     <i class="fas fa-globe text-yellow-400 text-[10px]">
-     </i>
-     <span>
-      Proses Cepat
-     </span>
-    </div>
-    <div class="flex items-center space-x-1">
-     <i class="fas fa-headset text-blue-600 text-[10px]">
-     </i>
-     <span>
-      Layanan Chat 24/7
-     </span>
-    </div>
-    <div class="flex items-center space-x-1">
-     <i class="fas fa-shield-alt text-blue-600 text-[10px]">
-     </i>
-     <span>
-      Pembayaran Aman!
-     </span>
-    </div>
-   </div>
-  </section>
-  <!-- Tabs -->
-  <section class="max-w-md mx-auto mt-4 bg-[#2a2a2a] rounded-lg overflow-hidden">
-   <div class="flex text-xs font-semibold text-white">
-    <button class="flex-1 bg-[#ff6a00] py-2 rounded-tl-lg rounded-bl-lg focus:outline-none" type="button">
-     Transaksi
-    </button>
-    <button class="flex-1 bg-[#2a2a2a] py-2 rounded-tr-lg rounded-br-lg focus:outline-none" type="button">
-     Keterangan
-    </button>
-   </div>
-   <!-- Form container -->
-   <form class="p-4 space-y-4">
-    <!-- Step 1 -->
-    <div class="space-y-2">
-     <div class="flex items-center bg-[#3a3a3a] px-3 py-2 rounded-md text-white font-semibold text-sm">
-      <span class="bg-[#ff6a00] rounded-sm px-2 py-1 mr-2">
-       1
-      </span>
-      Masukkan Data Akun
-     </div>
-     <div class="grid grid-cols-2 gap-4 text-xs text-gray-300">
-      <label class="flex flex-col space-y-1">
-       <span class="font-semibold flex items-center">
-        Username
-        <i class="fas fa-info-circle ml-1 text-gray-400 text-[10px]" title="Info">
-        </i>
-       </span>
-       <input class="bg-[#3a3a3a] rounded-md py-2 px-3 text-xs placeholder-gray-500 text-white focus:outline-none" placeholder="Masukkan Username" type="text"/>
-      </label>
-      <label class="flex flex-col space-y-1">
-       <span class="font-semibold">
-        Password
-       </span>
-       <input class="bg-[#3a3a3a] rounded-md py-2 px-3 text-xs placeholder-gray-500 text-white focus:outline-none" placeholder="Masukkan Password" type="password"/>
-      </label>
-     </div>
-     <p class="text-[10px] bg-[#6b3f2f] rounded-md px-3 py-1 mt-1 text-[#d9bba0]">
-      Please make sure you fill the correct account data
-     </p>
-    </div>
-    <!-- Step 2 -->
-    <div class="space-y-2">
-     <div class="flex items-center bg-[#3a3a3a] px-3 py-2 rounded-md text-white font-semibold text-sm">
-      <span class="bg-[#ff6a00] rounded-sm px-2 py-1 mr-2">
-       2
-      </span>
-      Pilih Nominal
-     </div>
-    </div>
    </form>
   </section>
 <html lang="en">
