--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
       </div>
       <nav class="flex flex-col gap-6 text-white font-semibold text-base leading-6">
         <a class="flex justify-between items-center" href="#">
-          <span>Topup</span>
+          <span>Halaman</span>Halaman.html<span>
           <i class="far fa-calendar-alt text-white text-lg"></i>
         </a>
         <a class="flex justify-between items-center" href="#">
-          <span>Cek Transaksi</span>
+          <span>Top Up</span>
           <i class="far fa-copy text-white text-lg"></i>
         </a>
         <a class="flex justify-between items-center" href="#">
-          <span>Leaderboard</span>
+          <span>Cek Transaksi</span>
           <i class="fas fa-sitemap text-white text-lg"></i>
         </a>
         <a class="flex justify-between items-center" href="#">
