Update and rename index.html to Top Up.html

--- a/Top Up.html
+++ b/Top Up.html
@@ -84,7 +84,7 @@
       </div>
       <nav class="flex flex-col gap-6 text-white font-semibold text-base leading-6">
         <a class="flex justify-between items-center" href="#">
-          <span>Halaman</span>Halaman.html<span>
+          <span>Halaman</span>
           <i class="far fa-calendar-alt text-white text-lg"></i>
         </a>
         <a class="flex justify-between items-center" href="#">
