--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
                 <button 
                     id="btnPesan"
                     class="btn-pesan w-full bg-orange-500 hover:bg-orange-600 text-white font-semibold rounded-md py-3 px-4 flex items-center justify-center"
-                    onclick="window.location.href='isiform.html'"
+                    onclick="window.location.href='isifrom.html'"
                 >
                     <i class="fas fa-shopping-bag mr-2"></i>
                     Pesan Sekarang
