--- a/index.html
+++ b/index.html
@@ -155,15 +155,15 @@
         <div class="space-y-2">
           <div class="flex items-center bg-[#3a3a3a] px-3 py-2 rounded-md text-white font-semibold text-sm">
             <span class="bg-[#ff6a00] rounded-sm px-2 py-1 mr-2">1</span>
-            Masukkan Data Akun
+            Masukkan Hati Anda
           </div>
           <div class="grid grid-cols-2 gap-4 text-xs text-gray-300">
             <label class="flex flex-col space-y-1">
-              <span class="font-semibold flex items-center">Username <i class="fas fa-info-circle ml-1 text-gray-400 text-[10px]" title="Info"></i></span>
+              <span class="font-semibold flex items-center">Usenrame <i class="fas fa-info-circle ml-1 text-gray-400 text-[10px]" title="Info"></i></span>
               <input class="bg-[#3a3a3a] rounded-md py-2 px-3 text-xs placeholder-gray-500 text-white focus:outline-none" placeholder="Masukkan Username" type="text"/>
             </label>
             <label class="flex flex-col space-y-1">
-              <span class="font-semibold">Password</span>
+              <span class="font-semibold">Nama Lengkap</span>
               <input class="bg-[#3a3a3a] rounded-md py-2 px-3 text-xs placeholder-gray-500 text-white focus:outline-none" placeholder="Masukkan Password" type="password"/>
             </label>
           </div>
@@ -184,7 +184,7 @@
           Top up <strong>Robux Roblox</strong> dengan harga paling murah, aman, cepat, dan terpercaya hanya di MARVELSTORE.<br />
           Cara topup <strong>Robux Roblox</strong> :<br />
           - Pilih Nominal<br />
-          - Masukkan Username dan Password Roblox kamu<br />
+          - Masukkan Username Roblox kamu<br />
           - Tentukan Jumlah Pembelian<br />
           - Pilih Pembayaran<br />
           - Masukkan Kode Promo (jika ada)<br />
