--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
           <i class="fas fa-times"></i>
         </button>
       </div>
-      <nav class="flex flex-col gap-6 text-white font-semibold text-base leading-6">
-        <a class="flex justify-between items-center" href="#">
-          <span>Halaman</span>
-          <i class="far fa-calendar-alt text-white text-lg"></i>
-        </a>
+       <nav class="flex flex-col gap-6 text-white font-semibold text-base leading-6">
+         <a class="flex justify-between items-center" href="fileB.html">
+          <span>BlackMarket</span>
+           <i class="far fa-calendar-alt text-white text-lg"></i>
+             </a>
         <a class="flex justify-between items-center" href="#">
           <span>Top Up</span>
           <i class="far fa-copy text-white text-lg"></i>
