--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </button>
       </div>
        <nav class="flex flex-col gap-6 text-white font-semibold text-base leading-6">
-         <a class="flex justify-between items-center" href="fileB.html">
+         <a class="flex justify-between items-center" href="BlackMarket.html">
           <span>BlackMarket</span>
            <i class="far fa-calendar-alt text-white text-lg"></i>
              </a>
