--- a/BlackMarket.html
+++ b/BlackMarket.html
@@ -3,37 +3,37 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <title>
-   STIGMA Topup Store
+   STIGMA Black Market
   </title>
   <script src="https://cdn.tailwindcss.com">
   </script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
   <style>
-   /* Diagonal stripes overlay */
-    .diagonal-stripes {
-      background-image: repeating-linear-gradient(
-        45deg,
-        rgba(255 255 255 / 0.15),
-        rgba(255 255 255 / 0.15) 10px,
-        transparent 10px,
-        transparent 20px
-      );
+   @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+    body {
+      margin: 0;
+      font-family: 'Anton', sans-serif;
     }
   </style>
  </head>
- <body>
-  <div class="min-h-screen bg-gradient-to-r from-[#3db9d9] to-[#d6d19a] p-6 md:p-10 lg:p-16 flex flex-col items-center">
-   <div class="w-full max-w-6xl rounded-2xl overflow-hidden relative">
-    <img alt="Colorful banner with various game characters, Windah Topup logo, and text 'WELCOME TO STIGMA Topup Store' on a blue sky background with clouds" class="w-full object-cover rounded-2xl" height="320" src="https://storage.googleapis.com/a1aa/image/78f99c6b-61a9-40e2-6e2c-5e2eef5fff7c.jpg" width="1200"/>
-    <button aria-label="Previous" class="absolute top-1/2 left-4 -translate-y-1/2 bg-[#0a4a5a] bg-opacity-70 hover:bg-opacity-90 text-white rounded-full w-10 h-10 flex items-center justify-center">
-     <i class="fas fa-chevron-left">
-     </i>
-    </button>
-    <button aria-label="Next" class="absolute top-1/2 right-4 -translate-y-1/2 bg-[#0a4a5a] bg-opacity-70 hover:bg-opacity-90 text-white rounded-full w-10 h-10 flex items-center justify-center">
-     <i class="fas fa-chevron-right">
-     </i>
-    </button>
+ <body class="bg-black flex items-center justify-center min-h-screen p-4">
+  <div class="relative max-w-full max-h-full rounded-3xl overflow-hidden border border-black" style="aspect-ratio: 16 / 9; max-width: 1000px; max-height: 562px;">
+   <img alt="Futuristic HUD background with glowing blue circular interface elements and a dark skull in the center" class="w-full h-full object-cover" height="562" src="https://storage.googleapis.com/a1aa/image/25aa7a5a-d371-44ee-6d27-895d98682fc6.jpg" width="1000"/>
+   <div class="absolute inset-0 flex flex-col items-center justify-center">
+    <div class="bg-black bg-opacity-90 px-4 py-1 mb-2">
+     <span class="text-gray-300 text-[28px] leading-none tracking-widest uppercase font-extrabold" style="font-family: 'Anton', sans-serif;">
+      STIGMA Black Market
+     </span>
+    </div>
+    <div class="bg-black bg-opacity-90 px-6 py-2">
+     <span class="text-gray-300 text-[72px] leading-none tracking-widest uppercase font-extrabold" style="font-family: 'Anton', sans-serif;">
+      BLACK MARKET
+     </span>
+    </div>
    </div>
+  </div>
+ </body>
+</html>
    <h2 class="mt-10 mb-6 text-white font-bold text-sm md:text-base flex items-center gap-2 select-none">
     <span>
      🔥
