--- a/BlackMarket.html
+++ b/BlackMarket.html
@@ -29,8 +29,8 @@
     <div class="max-w-6xl mx-auto">
       <div class="relative rounded-xl overflow-hidden">
         <img
-          src="https://placehold.co/900x300/png?text=Windah+Topup+Store+Banner+with+characters+and+logo"
-          alt="Windah Topup Store banner with various game characters, logo, and text 'WELCOME TO WINDAH Topup Store' on a blue sky background with clouds"
+          src="https://placehold.co/900x300/png?text=STIGMA+Topup+Store+Banner+with+characters+and+logo"
+          alt="STIGMA Topup Store banner with various game characters, logo, and text 'WELCOME TO STIGMA Topup Store' on a blue sky background with clouds"
           class="w-full rounded-xl object-cover"
         />
         <button
