--- a/BlackMarket.html
+++ b/BlackMarket.html
@@ -1,51 +1,37 @@
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Windah Topup Store</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-  />
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1" name="viewport"/>
+  <title>
+   STIGMA Topup Store
+  </title>
+  <script src="https://cdn.tailwindcss.com">
+  </script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
   <style>
-    /* Diagonal stripes overlay */
+   /* Diagonal stripes overlay */
     .diagonal-stripes {
       background-image: repeating-linear-gradient(
         45deg,
-        rgba(255, 255, 255, 0.15),
-        rgba(255, 255, 255, 0.15) 10px,
+        rgba(255 255 255 / 0.15),
+        rgba(255 255 255 / 0.15) 10px,
         transparent 10px,
         transparent 20px
       );
     }
   </style>
-</head>
-<body>
-  <div
-    class="min-h-screen p-6"
-    style="background: linear-gradient(90deg, #4ac1d1 0%, #d1c88a 100%)"
-  >
-    <div class="max-w-6xl mx-auto">
-      <div class="relative rounded-xl overflow-hidden">
-        <img
-          src="https://placehold.co/900x300/png?text=STIGMA+Topup+Store+Banner+with+characters+and+logo"
-          alt="STIGMA Topup Store banner with various game characters, logo, and text 'WELCOME TO STIGMA Topup Store' on a blue sky background with clouds"
-          class="w-full rounded-xl object-cover"
-        />
-        <button
-          aria-label="Previous"
-          class="absolute top-1/2 left-4 -translate-y-1/2 bg-[#0a4a5a] bg-opacity-70 hover:bg-opacity-90 text-white rounded-full w-10 h-10 flex items-center justify-center"
-        >
-          <i class="fas fa-chevron-left"></i>
-        </button>
-        <button
-          aria-label="Next"
-          class="absolute top-1/2 right-4 -translate-y-1/2 bg-[#0a4a5a] bg-opacity-70 hover:bg-opacity-90 text-white rounded-full w-10 h-10 flex items-center justify-center"
-        >
-          <i class="fas fa-chevron-right"></i>
-        </button>
-      </div>
+ </head>
+ <body>
+  <div class="min-h-screen bg-gradient-to-r from-[#3db9d9] to-[#d6d19a] p-6 md:p-10 lg:p-16 flex flex-col items-center">
+   <div class="w-full max-w-6xl rounded-2xl overflow-hidden relative">
+    <img alt="Colorful banner with various game characters, STIGMA Topup logo, and text 'WELCOME TO STIGMA Topup Store' on a blue sky background with clouds" class="w-full object-cover rounded-2xl" height="320" src="https://storage.googleapis.com/a1aa/image/78f99c6b-61a9-40e2-6e2c-5e2eef5fff7c.jpg" width="1200"/>
+    <button aria-label="Previous" class="absolute top-1/2 left-4 -translate-y-1/2 bg-[#0a4a5a] bg-opacity-70 hover:bg-opacity-90 text-white rounded-full w-10 h-10 flex items-center justify-center">
+     <i class="fas fa-chevron-left">
+     </i>
+    </button>
+    <button aria-label="Next" class="absolute top-1/2 right-4 -translate-y-1/2 bg-[#0a4a5a] bg-opacity-70 hover:bg-opacity-90 text-white rounded-full w-10 h-10 flex items-center justify-center">
+     <i class="fas fa-chevron-right">
+     </i>
+    </button>
+   </div>
    <h2 class="mt-10 mb-6 text-white font-bold text-sm md:text-base flex items-center gap-2 select-none">
     <span>
      🔥
