--- a/BlackMarket.html
+++ b/BlackMarket.html
@@ -26,7 +26,7 @@
         </div>
         
         <!-- Character image -->
-        <img alt="Futuristic female character" class="absolute bottom-0 right-0 w-[280px] h-[480px] object-contain z-30" draggable="false" src="https://storage.googleapis.com/a1aa/image/f0bacd8c-1bb1-44eb-3f2a-93442c18316f.jpg"/>
+        <img alt="Futuristic female character" class="absolute bottom-0 right-0 w-[280px] h-[480px] object-contain z-30" draggable="false" src="https://i.ibb.co/DHqBygtx/FB-IMG-1750472715790.jpg"/>
     </div>
 
     <h2 class="mt-10 mb-6 text-white font-bold text-sm md:text-base flex items-center gap-2 select-none">
