--- a/BlackMarket.html
+++ b/BlackMarket.html
@@ -100,8 +100,8 @@
 
   <div class="grid">
     <div class="diagonal-stripes">
-      <img alt=< src="https://ibb.co/TxFHZNCj"><img src="https://i.ibb.co/4n5jc0Qv/Roblox.webp"/>
-      <div class="text-white">
+      <img alt src="https://ibb.co/TxFHZNCj"><img src="https://i.ibb.co/4n5jc0Qv/Roblox.webp"/>
+      <div class="text-Red">
         <p class="font-semibold">Ress Roblox</p>
         <p class="text-xs opacity-80">Stock 10.000</p>
       </div>
