--- a/BlackMarket.html
+++ b/BlackMarket.html
@@ -100,7 +100,7 @@
 
   <div class="grid">
     <div class="diagonal-stripes">
-      <img src="https://ibb.co/TxFHZNCj"><img src="https://i.ibb.co/4n5jc0Qv/Roblox.webp"/>
+<a href="https://ibb.co/TxFHZNCj"><img src="https://i.ibb.co/4n5jc0Qv/Roblox.webp" alt="Roblox" border="0"></a>
       <div class="text-Red">
         <p class="font-semibold">Ress Roblox</p>
         <p class="text-xs opacity-80">Stock 10.000</p>
