--- a/BlackMarket.html
+++ b/BlackMarket.html
@@ -107,7 +107,7 @@
       </div>
     </div>
     <div class="diagonal-stripes">
-      <a href="https://imgbb.com/"><img src="https://i.ibb.co/9k0PpCzY/images.jpg" alt="images" border="0"></a>
+      <a href=><img src="https://i.ibb.co/9k0PpCzY/images.jpg" alt="images" border="0"></a>
       <div class="text-white">
         <p class="font-semibold">Ress Netflix</p>
         <p class="text-xs opacity-80">Stock 10.000</p>
