--- a/BlackMarket.html
+++ b/BlackMarket.html
@@ -100,7 +100,7 @@
 
   <div class="grid">
     <div class="diagonal-stripes">
-<a href="https://ibb.co/TxFHZNCj"><img src="https://i.ibb.co/4n5jc0Qv/Roblox.webp" alt="Roblox" border="0"></a>
+<a href=><img src="https://i.ibb.co/4n5jc0Qv/Roblox.webp" alt="Roblox" border="0"></a>
       <div class="text-Red">
         <p class="font-semibold">Ress Roblox</p>
         <p class="text-xs opacity-80">Stock 10.000</p>
@@ -114,7 +114,7 @@
       </div>
     </div>
     <div class="diagonal-stripes">
-      <a href="https://ibb.co/6Rv97RXk"><img src="https://i.ibb.co/XZy0rZYq/01u-Utdv-BJd0-VNa-Zlw5-H1-Qid-1-v1723632784.jpg" alt="01u-Utdv-BJd0-VNa-Zlw5-H1-Qid-1-v1723632784" border="0"></a>
+      <a href=><img src="https://i.ibb.co/XZy0rZYq/01u-Utdv-BJd0-VNa-Zlw5-H1-Qid-1-v1723632784.jpg" alt="01u-Utdv-BJd0-VNa-Zlw5-H1-Qid-1-v1723632784" border="0"></a>
       <div class="text-white">
         <p class="font-semibold">Ress Spotify</p>
         <p class="text-xs opacity-80">10.000</p>
@@ -128,14 +128,14 @@
       </div>
     </div>
     <div class="diagonal-stripes">
-      <a href="https://ibb.co/TBf60Wy5"><img src="https://i.ibb.co/tMGg2LR5/easy-steps-to-access-your-hotmail-account-779868.webp" alt="easy-steps-to-access-your-hotmail-account-779868" border="0"></a>
+      <a href=><img src="https://i.ibb.co/tMGg2LR5/easy-steps-to-access-your-hotmail-account-779868.webp" alt="easy-steps-to-access-your-hotmail-account-779868" border="0"></a>
       <div class="text-white">
         <p class="font-semibold">Ress Hotmail</p>
         <p class="text-xs opacity-80">Stock 100.000</p>
       </div>
     </div>
     <div class="diagonal-stripes">
-      <a href="https://ibb.co/9CrpG06"><img src="https://i.ibb.co/mMcRSKk/2024-11-Blog-Is-Capcut-safe-for-kids-Thumbnail.jpg" alt="2024-11-Blog-Is-Capcut-safe-for-kids-Thumbnail" border="0"></a>
+      <a href=><img src="https://i.ibb.co/mMcRSKk/2024-11-Blog-Is-Capcut-safe-for-kids-Thumbnail.jpg" alt="2024-11-Blog-Is-Capcut-safe-for-kids-Thumbnail" border="0"></a>
       <div class="text-white">
         <p class="font-semibold">Ress Capcut</p>
         <p class="text-xs opacity-80">Stock 10.000</p>
