--- a/BlackMarket.html
+++ b/BlackMarket.html
@@ -86,7 +86,7 @@
 </head>
 <body>
 
-  <a href="https://ibb.co/Hf5pYpJ3" target="_blank">
+  <a href+ target="_blank">
     <img 
       src="https://i.ibb.co/5gbxvx7w/IMG-20250621-095627-687.jpg" 
       alt="Bianca Stigma" 
