--- a/BlackMarket.html
+++ b/BlackMarket.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,88 +16,83 @@
       height: 100vh;
       color: white;
       font-family: Arial, sans-serif;
-      overflow: hidden;
-    }.fade-in {
-  opacity: 0;
-  transform: translateY(40px);
-  animation: fadeInUp 1.5s ease-out forwards;
-}
+    }
 
-@keyframes fadeInUp {
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
+    .fade-in {
+      opacity: 0;
+      transform: translateY(40px);
+      animation: fadeInUp 1.5s ease-out forwards;
+    }
 
-.glow-hover {
-  transition: all 0.3s ease-in-out;
-  border-radius: 12px;
-  box-shadow: 0 0 0 transparent;
-}
+    @keyframes fadeInUp {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
 
-.glow-hover:hover {
-  transform: scale(1.03);
-  box-shadow: 0 0 25px rgba(173, 216, 230, 0.5);
-}
+    .glow-hover {
+      transition: all 0.3s ease-in-out;
+      border-radius: 12px;
+      box-shadow: 0 0 0 transparent;
+    }
 
-img {
-  width: 90%;
-  max-width: 500px;
-  border-radius: 12px;
-}
+    .glow-hover:hover {
+      transform: scale(1.03);
+      box-shadow: 0 0 25px rgba(173, 216, 230, 0.5);
+    }
 
-h2 {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  font-size: 1.5em;
-  text-align: center;
-}
+    img {
+      width: 90%;
+      max-width: 500px;
+      border-radius: 12px;
+    }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 20px;
-  width: 100%;
-  max-width: 1200px;
-  padding: 0 20px;
-}
+    h2 {
+      margin-top: 20px;
+      margin-bottom: 20px;
+      font-size: 1.5em;
+      text-align: center;
+    }
 
-.diagonal-stripes {
-  background-color: #1db1d1;
-  border-radius: 12px;
-  padding: 20px;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      gap: 20px;
+      width: 100%;
+      max-width: 1200px;
+      padding: 0 20px;
+    }
 
-.diagonal-stripes img {
-  width: 64px;
-  height: 64px;
-  border-radius: 8px;
-}
+    .diagonal-stripes {
+      background-color: #1db1d1;
+      border-radius: 12px;
+      padding: 20px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
 
-.text-white {
-  color: white;
-}
+    .diagonal-stripes img {
+      width: 64px;
+      height: 64px;
+      border-radius: 8px;
+    }
 
-/* Rain Animation */
-.rain {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-  z-index: 1;
-}
+    .text-white {
+      color: white;
+    }
+  </style>
+</head>
+<body>
 
-.raindrop {
-  position: absolute;
-  width: 2px;
-  height: 15px;
-  background: rgba(255,
+  <a href+ target="_blank">
+    <img 
+      src="https://i.ibb.co/5gbxvx7w/IMG-20250621-095627-687.jpg" 
+      alt="Bianca Stigma" 
+      class="fade-in glow-hover"
+    >
+  </a>
 
   <h2>
     <span>🔥</span> PALING BANYAK DI BELI <span>🔥</span>
